@@ -417,4 +417,8 @@ public interface ERDesignerBundle {
   String DELETENOTUSEDATTRIBUTES = "DELETENOTUSEDATTRIBUTES";
   /** \u004e\u0061\u006d\u0065\u0020\u006f\u0066\u0020\u006e\u0065\u0077\u0020\u0041\u0074\u0074\u0072\u0069\u0062\u0075\u0074\u0065\u0073\u0020\u0069\u006e\u0020\u0052\u0065\u006c\u0061\u0074\u0069\u006f\u006e\u0073. */
   String AUTOMATICRELATIONATTRIBUTEPATTERN = "AUTOMATICRELATIONATTRIBUTEPATTERN";
+  /** \u0044\u0065\u0066\u0061\u0075\u006c\u0074\u0020\u0066\u006f\u0072\u0020\u004f\u004e\u0044\u0045\u004c\u0045\u0054\u0045. */
+  String DEFAULTFORONDELETE = "DEFAULTFORONDELETE";
+  /** \u0044\u0065\u0066\u0061\u0075\u006c\u0074\u0020\u0066\u006f\u0072\u0020\u004f\u004e\u0055\u0050\u0044\u0041\u0054\u0045. */
+  String DEFAULTFORONUPDATE = "DEFAULTFORONUPDATE";
 }
